# git

./: .gitignore  README.md  git.dart
.cursor/.agent-tools/: 02c0315a-b6de-4a91-8acb-65e374597272.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  uvicorn.sh
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: accounts.py  auth.py  journals.py  organizations.py  reports.py
backend/app/api/v1/: accounting.py  auth.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: account.py  accounting.py  base.py  journal.py  organization.py  user.py
backend/app/schemas/: account.py  accounting.py  auth.py  journal.py  organization.py  user.py
backend/app/services/: posting.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_accounting.py
backend/tests/: test_api.py
infra/: docker-compose.yml  ubuntu_setup.md
infra/scripts/: deploy_ubuntu.sh
mobile/flutter_app/: android_placeholder.txt  pubspec.yaml
mobile/flutter_app/lib/: main.dart
