[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accounting-backend"
version = "0.1.0"
description = "Modern Accounting System backend"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.20",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
  "psycopg[binary,pool]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0",
  "redis>=5.0.8",
  "httpx>=0.27.2",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
  "mypy>=1.12.1",
  "types-redis",
  "types-requests",
]
